--- a/src/Student/StudentAccount.form
+++ b/src/Student/StudentAccount.form
@@ -375,6 +375,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Paid"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="20" y="340" width="100" height="30"/>
