Beeru add product

--- a/src/setting/SettingIFrame.form
+++ b/src/setting/SettingIFrame.form
@@ -974,6 +974,7 @@
                           <Font name="Tahoma" size="14" style="1"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Save"/>
+                        <Property name="focusPainted" type="boolean" value="false"/>
                       </Properties>
                       <Events>
                         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="feeBookSave1MouseClicked"/>
